etapa2/y.output
Terminals unused in grammar

    TOKEN_ERROR


State 57 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declaration declarationList
    3                | %empty

    4 declaration: globalVariableDeclaration
    5            | globalVectorDeclaration
    6            | functionDeclaration

    7 type: KW_FLOAT
    8     | KW_CHAR
    9     | KW_INT

   10 literal: LIT_CHAR
   11        | LIT_FLOAT
   12        | LIT_INTEGER

   13 literalList: literal literalListTail

   14 literalListTail: literal literalListTail
   15                | %empty

   16 initialization: '(' literal ')'

   17 optionalInitialization: literalList
   18                       | %empty

   19 globalVariableDeclaration: type TK_IDENTIFIER initialization ';'

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' LIT_INTEGER ']' optionalInitialization ';'

   21 param: type TK_IDENTIFIER

   22 optionalParamsList: param optionalParamsList
   23                   | %empty

   24 functionDeclaration: type TK_IDENTIFIER '(' optionalParamsList ')' commandBlock

   25 commandBlock: '{' commandList '}'

   26 commandList: command commandListTail

   27 commandListTail: ';' command commandListTail
   28                | %empty

   29 command: assignment
   30        | readCommand
   31        | printCommand
   32        | returnCommand
   33        | ifCommand
   34        | whileCommand
   35        | commandBlock
   36        | %empty

   37 assignment: TK_IDENTIFIER ASSIGNMENT expression
   38           | TK_IDENTIFIER '[' expression ']' ASSIGNMENT expression

   39 readCommand: KW_READ TK_IDENTIFIER optionalIndex

   40 optionalIndex: '[' expression ']'
   41              | %empty

   42 printCommand: KW_PRINT printParamList

   43 printParam: LIT_STRING
   44           | expression

   45 printParamList: printParam printParamList
   46               | %empty

   47 returnCommand: KW_RETURN expression

   48 ifCommand: KW_IF '(' expression ')' command optionalElse

   49 optionalElse: KW_ELSE command
   50             | %empty

   51 whileCommand: KW_WHILE '(' expression ')' command

   52 expression: TK_IDENTIFIER
   53           | TK_IDENTIFIER '[' expression ']'
   54           | literal
   55           | expression '+' expression
   56           | expression '-' expression
   57           | expression '.' expression
   58           | expression '/' expression
   59           | expression '>' expression
   60           | expression '<' expression
   61           | expression OPERATOR_LE expression
   62           | expression OPERATOR_GE expression
   63           | expression OPERATOR_EQ expression
   64           | expression OPERATOR_DIF expression
   65           | expression '&' expression
   66           | expression '|' expression
   67           | expression '~' expression
   68           | '(' expression ')'
   69           | functionCall

   70 functionCall: TK_IDENTIFIER '(' functionParamsList ')'

   71 functionParamsList: expression functionParamsList
   72                   | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 65
    '(' (40) 16 24 48 51 68 70
    ')' (41) 16 24 48 51 68 70
    '+' (43) 55
    '-' (45) 56
    '.' (46) 57
    '/' (47) 58
    ';' (59) 19 20 27
    '<' (60) 60
    '>' (62) 59
    '[' (91) 20 38 40 53
    ']' (93) 20 38 40 53
    '{' (123) 25
    '|' (124) 66
    '}' (125) 25
    '~' (126) 67
    error (256)
    KW_CHAR (258) 8
    KW_INT (259) 9
    KW_FLOAT (260) 7
    KW_IF (261) 48
    KW_ELSE (262) 49
    KW_WHILE (263) 51
    KW_READ (264) 39
    KW_PRINT (265) 42
    KW_RETURN (266) 47
    ASSIGNMENT (267) 37 38
    OPERATOR_LE (268) 61
    OPERATOR_GE (269) 62
    OPERATOR_EQ (270) 63
    OPERATOR_DIF (271) 64
    TK_IDENTIFIER (272) 19 20 21 24 37 38 39 52 53 70
    LIT_INTEGER (273) 12 20
    LIT_FLOAT (274) 11
    LIT_CHAR (275) 10
    LIT_STRING (276) 43
    TOKEN_ERROR (277)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program (40)
        on left: 1
        on right: 0
    declarationList (41)
        on left: 2 3
        on right: 1 2
    declaration (42)
        on left: 4 5 6
        on right: 2
    type (43)
        on left: 7 8 9
        on right: 19 20 21 24
    literal (44)
        on left: 10 11 12
        on right: 13 14 16 54
    literalList (45)
        on left: 13
        on right: 17
    literalListTail (46)
        on left: 14 15
        on right: 13 14
    initialization (47)
        on left: 16
        on right: 19
    optionalInitialization (48)
        on left: 17 18
        on right: 20
    globalVariableDeclaration (49)
        on left: 19
        on right: 4
    globalVectorDeclaration (50)
        on left: 20
        on right: 5
    param (51)
        on left: 21
        on right: 22
    optionalParamsList (52)
        on left: 22 23
        on right: 22 24
    functionDeclaration (53)
        on left: 24
        on right: 6
    commandBlock (54)
        on left: 25
        on right: 24 35
    commandList (55)
        on left: 26
        on right: 25
    commandListTail (56)
        on left: 27 28
        on right: 26 27
    command (57)
        on left: 29 30 31 32 33 34 35 36
        on right: 26 27 48 49 51
    assignment (58)
        on left: 37 38
        on right: 29
    readCommand (59)
        on left: 39
        on right: 30
    optionalIndex (60)
        on left: 40 41
        on right: 39
    printCommand (61)
        on left: 42
        on right: 31
    printParam (62)
        on left: 43 44
        on right: 45
    printParamList (63)
        on left: 45 46
        on right: 42 45
    returnCommand (64)
        on left: 47
        on right: 32
    ifCommand (65)
        on left: 48
        on right: 33
    optionalElse (66)
        on left: 49 50
        on right: 48
    whileCommand (67)
        on left: 51
        on right: 34
    expression (68)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 37 38 40 44 47 48 51 53 55 56 57 58 59 60 61 62 63 64 65 66 67 68 71
    functionCall (69)
        on left: 70
        on right: 69
    functionParamsList (70)
        on left: 71 72
        on right: 70 71


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declarationList)

    program                    go to state 4
    declarationList            go to state 5
    declaration                go to state 6
    type                       go to state 7
    globalVariableDeclaration  go to state 8
    globalVectorDeclaration    go to state 9
    functionDeclaration        go to state 10


State 1

    8 type: KW_CHAR .

    $default  reduce using rule 8 (type)


State 2

    9 type: KW_INT .

    $default  reduce using rule 9 (type)


State 3

    7 type: KW_FLOAT .

    $default  reduce using rule 7 (type)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 11


State 5

    1 program: declarationList .

    $default  reduce using rule 1 (program)


State 6

    2 declarationList: declaration . declarationList

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declarationList)

    declarationList            go to state 12
    declaration                go to state 6
    type                       go to state 7
    globalVariableDeclaration  go to state 8
    globalVectorDeclaration    go to state 9
    functionDeclaration        go to state 10


State 7

   19 globalVariableDeclaration: type . TK_IDENTIFIER initialization ';'
   20 globalVectorDeclaration: type . TK_IDENTIFIER '[' LIT_INTEGER ']' optionalInitialization ';'
   24 functionDeclaration: type . TK_IDENTIFIER '(' optionalParamsList ')' commandBlock

    TK_IDENTIFIER  shift, and go to state 13


State 8

    4 declaration: globalVariableDeclaration .

    $default  reduce using rule 4 (declaration)


State 9

    5 declaration: globalVectorDeclaration .

    $default  reduce using rule 5 (declaration)


State 10

    6 declaration: functionDeclaration .

    $default  reduce using rule 6 (declaration)


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 declarationList: declaration declarationList .

    $default  reduce using rule 2 (declarationList)


State 13

   19 globalVariableDeclaration: type TK_IDENTIFIER . initialization ';'
   20 globalVectorDeclaration: type TK_IDENTIFIER . '[' LIT_INTEGER ']' optionalInitialization ';'
   24 functionDeclaration: type TK_IDENTIFIER . '(' optionalParamsList ')' commandBlock

    '('  shift, and go to state 14
    '['  shift, and go to state 15

    initialization  go to state 16


State 14

   16 initialization: '(' . literal ')'
   24 functionDeclaration: type TK_IDENTIFIER '(' . optionalParamsList ')' commandBlock

    KW_CHAR      shift, and go to state 1
    KW_INT       shift, and go to state 2
    KW_FLOAT     shift, and go to state 3
    LIT_INTEGER  shift, and go to state 17
    LIT_FLOAT    shift, and go to state 18
    LIT_CHAR     shift, and go to state 19

    $default  reduce using rule 23 (optionalParamsList)

    type                go to state 20
    literal             go to state 21
    param               go to state 22
    optionalParamsList  go to state 23


State 15

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' . LIT_INTEGER ']' optionalInitialization ';'

    LIT_INTEGER  shift, and go to state 24


State 16

   19 globalVariableDeclaration: type TK_IDENTIFIER initialization . ';'

    ';'  shift, and go to state 25


State 17

   12 literal: LIT_INTEGER .

    $default  reduce using rule 12 (literal)


State 18

   11 literal: LIT_FLOAT .

    $default  reduce using rule 11 (literal)


State 19

   10 literal: LIT_CHAR .

    $default  reduce using rule 10 (literal)


State 20

   21 param: type . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 26


State 21

   16 initialization: '(' literal . ')'

    ')'  shift, and go to state 27


State 22

   22 optionalParamsList: param . optionalParamsList

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 23 (optionalParamsList)

    type                go to state 20
    param               go to state 22
    optionalParamsList  go to state 28


State 23

   24 functionDeclaration: type TK_IDENTIFIER '(' optionalParamsList . ')' commandBlock

    ')'  shift, and go to state 29


State 24

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' LIT_INTEGER . ']' optionalInitialization ';'

    ']'  shift, and go to state 30


State 25

   19 globalVariableDeclaration: type TK_IDENTIFIER initialization ';' .

    $default  reduce using rule 19 (globalVariableDeclaration)


State 26

   21 param: type TK_IDENTIFIER .

    $default  reduce using rule 21 (param)


State 27

   16 initialization: '(' literal ')' .

    $default  reduce using rule 16 (initialization)


State 28

   22 optionalParamsList: param optionalParamsList .

    $default  reduce using rule 22 (optionalParamsList)


State 29

   24 functionDeclaration: type TK_IDENTIFIER '(' optionalParamsList ')' . commandBlock

    '{'  shift, and go to state 31

    commandBlock  go to state 32


State 30

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' LIT_INTEGER ']' . optionalInitialization ';'

    LIT_INTEGER  shift, and go to state 17
    LIT_FLOAT    shift, and go to state 18
    LIT_CHAR     shift, and go to state 19

    $default  reduce using rule 18 (optionalInitialization)

    literal                 go to state 33
    literalList             go to state 34
    optionalInitialization  go to state 35


State 31

   25 commandBlock: '{' . commandList '}'

    KW_IF          shift, and go to state 36
    KW_WHILE       shift, and go to state 37
    KW_READ        shift, and go to state 38
    KW_PRINT       shift, and go to state 39
    KW_RETURN      shift, and go to state 40
    TK_IDENTIFIER  shift, and go to state 41
    '{'            shift, and go to state 31

    $default  reduce using rule 36 (command)

    commandBlock   go to state 42
    commandList    go to state 43
    command        go to state 44
    assignment     go to state 45
    readCommand    go to state 46
    printCommand   go to state 47
    returnCommand  go to state 48
    ifCommand      go to state 49
    whileCommand   go to state 50


State 32

   24 functionDeclaration: type TK_IDENTIFIER '(' optionalParamsList ')' commandBlock .

    $default  reduce using rule 24 (functionDeclaration)


State 33

   13 literalList: literal . literalListTail

    LIT_INTEGER  shift, and go to state 17
    LIT_FLOAT    shift, and go to state 18
    LIT_CHAR     shift, and go to state 19

    $default  reduce using rule 15 (literalListTail)

    literal          go to state 51
    literalListTail  go to state 52


State 34

   17 optionalInitialization: literalList .

    $default  reduce using rule 17 (optionalInitialization)


State 35

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' LIT_INTEGER ']' optionalInitialization . ';'

    ';'  shift, and go to state 53


State 36

   48 ifCommand: KW_IF . '(' expression ')' command optionalElse

    '('  shift, and go to state 54


State 37

   51 whileCommand: KW_WHILE . '(' expression ')' command

    '('  shift, and go to state 55


State 38

   39 readCommand: KW_READ . TK_IDENTIFIER optionalIndex

    TK_IDENTIFIER  shift, and go to state 56


State 39

   42 printCommand: KW_PRINT . printParamList

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 59

    $default  reduce using rule 46 (printParamList)

    literal         go to state 60
    printParam      go to state 61
    printParamList  go to state 62
    expression      go to state 63
    functionCall    go to state 64


State 40

   47 returnCommand: KW_RETURN . expression

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 65
    functionCall  go to state 64


State 41

   37 assignment: TK_IDENTIFIER . ASSIGNMENT expression
   38           | TK_IDENTIFIER . '[' expression ']' ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 66
    '['         shift, and go to state 67


State 42

   35 command: commandBlock .

    $default  reduce using rule 35 (command)


State 43

   25 commandBlock: '{' commandList . '}'

    '}'  shift, and go to state 68


State 44

   26 commandList: command . commandListTail

    ';'  shift, and go to state 69

    $default  reduce using rule 28 (commandListTail)

    commandListTail  go to state 70


State 45

   29 command: assignment .

    $default  reduce using rule 29 (command)


State 46

   30 command: readCommand .

    $default  reduce using rule 30 (command)


State 47

   31 command: printCommand .

    $default  reduce using rule 31 (command)


State 48

   32 command: returnCommand .

    $default  reduce using rule 32 (command)


State 49

   33 command: ifCommand .

    $default  reduce using rule 33 (command)


State 50

   34 command: whileCommand .

    $default  reduce using rule 34 (command)


State 51

   14 literalListTail: literal . literalListTail

    LIT_INTEGER  shift, and go to state 17
    LIT_FLOAT    shift, and go to state 18
    LIT_CHAR     shift, and go to state 19

    $default  reduce using rule 15 (literalListTail)

    literal          go to state 51
    literalListTail  go to state 71


State 52

   13 literalList: literal literalListTail .

    $default  reduce using rule 13 (literalList)


State 53

   20 globalVectorDeclaration: type TK_IDENTIFIER '[' LIT_INTEGER ']' optionalInitialization ';' .

    $default  reduce using rule 20 (globalVectorDeclaration)


State 54

   48 ifCommand: KW_IF '(' . expression ')' command optionalElse

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 72
    functionCall  go to state 64


State 55

   51 whileCommand: KW_WHILE '(' . expression ')' command

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 73
    functionCall  go to state 64


State 56

   39 readCommand: KW_READ TK_IDENTIFIER . optionalIndex

    '['  shift, and go to state 74

    $default  reduce using rule 41 (optionalIndex)

    optionalIndex  go to state 75


State 57

   52 expression: TK_IDENTIFIER .
   53           | TK_IDENTIFIER . '[' expression ']'
   70 functionCall: TK_IDENTIFIER . '(' functionParamsList ')'

    '('  shift, and go to state 76
    '['  shift, and go to state 77

    '('       [reduce using rule 52 (expression)]
    $default  reduce using rule 52 (expression)


State 58

   43 printParam: LIT_STRING .

    $default  reduce using rule 43 (printParam)


State 59

   68 expression: '(' . expression ')'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 78
    functionCall  go to state 64


State 60

   54 expression: literal .

    $default  reduce using rule 54 (expression)


State 61

   45 printParamList: printParam . printParamList

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    LIT_STRING     shift, and go to state 58
    '('            shift, and go to state 59

    $default  reduce using rule 46 (printParamList)

    literal         go to state 60
    printParam      go to state 61
    printParamList  go to state 79
    expression      go to state 63
    functionCall    go to state 64


State 62

   42 printCommand: KW_PRINT printParamList .

    $default  reduce using rule 42 (printCommand)


State 63

   44 printParam: expression .
   55 expression: expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '.' expression
   58           | expression . '/' expression
   59           | expression . '>' expression
   60           | expression . '<' expression
   61           | expression . OPERATOR_LE expression
   62           | expression . OPERATOR_GE expression
   63           | expression . OPERATOR_EQ expression
   64           | expression . OPERATOR_DIF expression
   65           | expression . '&' expression
   66           | expression . '|' expression
   67           | expression . '~' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '~'           shift, and go to state 84
    '&'           shift, and go to state 85
    '|'           shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '.'           shift, and go to state 91
    '/'           shift, and go to state 92

    $default  reduce using rule 44 (printParam)


State 64

   69 expression: functionCall .

    $default  reduce using rule 69 (expression)


State 65

   47 returnCommand: KW_RETURN expression .
   55 expression: expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '.' expression
   58           | expression . '/' expression
   59           | expression . '>' expression
   60           | expression . '<' expression
   61           | expression . OPERATOR_LE expression
   62           | expression . OPERATOR_GE expression
   63           | expression . OPERATOR_EQ expression
   64           | expression . OPERATOR_DIF expression
   65           | expression . '&' expression
   66           | expression . '|' expression
   67           | expression . '~' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '~'           shift, and go to state 84
    '&'           shift, and go to state 85
    '|'           shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '.'           shift, and go to state 91
    '/'           shift, and go to state 92

    $default  reduce using rule 47 (returnCommand)


State 66

   37 assignment: TK_IDENTIFIER ASSIGNMENT . expression

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 93
    functionCall  go to state 64


State 67

   38 assignment: TK_IDENTIFIER '[' . expression ']' ASSIGNMENT expression

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 94
    functionCall  go to state 64


State 68

   25 commandBlock: '{' commandList '}' .

    $default  reduce using rule 25 (commandBlock)


State 69

   27 commandListTail: ';' . command commandListTail

    KW_IF          shift, and go to state 36
    KW_WHILE       shift, and go to state 37
    KW_READ        shift, and go to state 38
    KW_PRINT       shift, and go to state 39
    KW_RETURN      shift, and go to state 40
    TK_IDENTIFIER  shift, and go to state 41
    '{'            shift, and go to state 31

    $default  reduce using rule 36 (command)

    commandBlock   go to state 42
    command        go to state 95
    assignment     go to state 45
    readCommand    go to state 46
    printCommand   go to state 47
    returnCommand  go to state 48
    ifCommand      go to state 49
    whileCommand   go to state 50


State 70

   26 commandList: command commandListTail .

    $default  reduce using rule 26 (commandList)


State 71

   14 literalListTail: literal literalListTail .

    $default  reduce using rule 14 (literalListTail)


State 72

   48 ifCommand: KW_IF '(' expression . ')' command optionalElse
   55 expression: expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '.' expression
   58           | expression . '/' expression
   59           | expression . '>' expression
   60           | expression . '<' expression
   61           | expression . OPERATOR_LE expression
   62           | expression . OPERATOR_GE expression
   63           | expression . OPERATOR_EQ expression
   64           | expression . OPERATOR_DIF expression
   65           | expression . '&' expression
   66           | expression . '|' expression
   67           | expression . '~' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '~'           shift, and go to state 84
    '&'           shift, and go to state 85
    '|'           shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '.'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 96


State 73

   51 whileCommand: KW_WHILE '(' expression . ')' command
   55 expression: expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '.' expression
   58           | expression . '/' expression
   59           | expression . '>' expression
   60           | expression . '<' expression
   61           | expression . OPERATOR_LE expression
   62           | expression . OPERATOR_GE expression
   63           | expression . OPERATOR_EQ expression
   64           | expression . OPERATOR_DIF expression
   65           | expression . '&' expression
   66           | expression . '|' expression
   67           | expression . '~' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '~'           shift, and go to state 84
    '&'           shift, and go to state 85
    '|'           shift, and go to state 86
    '<'           shift, and go to state 87
    '>'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '.'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 97


State 74

   40 optionalIndex: '[' . expression ']'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INTEGER    shift, and go to state 17
    LIT_FLOAT      shift, and go to state 18
    LIT_CHAR       shift, and go to state 19
    '('            shift, and go to state 59

    literal       go to state 60
    expression    go to state 98
    functionCall  go to state 64


State 75

   39 readCommand: KW_READ TK_IDENTIFIER optionalIndex .

    $default  reduce using rule 39 (readCommand)


State 76

   70 functionCall: TK_IDENTIFIER '(' . functionParamsList ')'
